--- a/src/app/components/shared/header/header.component.css
+++ b/src/app/components/shared/header/header.component.css
@@ -1,3 +1,22 @@
+.header {
+    display: flex;
+    justify-content: space-between;
+}
+
+.logo {
+    display: flex;
+    align-items: flex-end;
+    padding-left: 15px;
+    top: 5%;
+    text-decoration: underline;
+}
+
+.logo button {
+    font-size: 25px;
+    font-family: veganStyle;
+    padding: 10px 10px 0 10px;
+}
+
 .buttons {
     display: flex;
     justify-content: flex-end;
@@ -55,6 +74,11 @@
 }
 
 @media only screen and (max-width: 700px)  {
+    .logo {
+        position: absolute;
+        top: 4%;
+    }
+
     .hamburger {
         position: absolute;
         cursor: pointer;
